--- a/package.json
+++ b/package.json
@@ -57,7 +57,10 @@
     "@dcloudio/uni-stat": "^2.0.0-31220210205003",
     "@vue/shared": "^3.0.0",
     "core-js": "^3.6.5",
+    "fast-text-encoding": "^1.0.3",
     "flyio": "^0.6.2",
+    "pako": "^2.0.3",
+    "plus-websocket": "^1.0.5",
     "regenerator-runtime": "^0.12.1",
     "vue": "^2.6.11",
     "vuex": "^3.2.0"
